--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@
   color: #444343;
 }
 /* myplan section css */
+.my-plan-section {
+  margin-bottom: 130px;
+}
 .plan-container {
   display: flex;
   gap: 189px;
@@ -101,4 +104,81 @@
   font-size: 25px;
   color: #737272;
   margin-top: 16px;
+}
+/* call-info section css */
+.call-info {
+  width: 1140px;
+  height: 300px;
+  background: linear-gradient(90deg, #f15b22 0%, rgba(241, 91, 34, 0) 100%),
+    url(../images/watch.png);
+  border-radius: 8px;
+  margin: 0 390px;
+}
+.col-info-item {
+  padding: 70px 50px;
+}
+.call-info-section-title {
+  width: 459px;
+  font-weight: 700;
+  font-size: 40px;
+  color: #ffffff;
+  margin-bottom: 25px;
+}
+.btn-call-info {
+  height: 64px;
+  font-weight: 600;
+  font-size: 20px;
+  color: #f15b22;
+  border: 0;
+  background: #ffffff;
+  border-radius: 5px;
+  padding: 0px 40px;
+}
+/* footer section css */
+.footer-section {
+  margin-top: 130px;
+  height: 570px;
+  background: #151414;
+}
+.footer-item {
+  display: flex;
+  padding-top: 115px;
+    margin-left: 230px;
+    gap: 530px;
+}
+
+.footer-title {
+  font-weight: 700;
+  font-size: 45px;
+  color: #f8f8f8;
+  margin-bottom: 15px;
+}
+.footer-description {
+  width: 485px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+.icon a {
+  text-decoration: none;
+  padding: 0px 5px;
+}
+.contact-title {
+  font-weight: 600;
+  font-size: 25px;
+  color: #ffffff;
+  margin-bottom: 30px;
+}
+.contact input {
+  box-sizing: border-box;
+  width: 325px;
+  height: 64px;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
+  font-weight: 400;
+  font-size: 18px;
+  color: #f3f3f3;
+  margin-bottom: 15px;
+  padding-left: 20px;
 }
