--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@
   border-radius: 8px;
   margin: 0 390px;
 }
-.col-info-item {
+.call-info-item {
   padding: 70px 50px;
 }
 .call-info-section-title {
@@ -134,6 +134,33 @@
   border-radius: 5px;
   padding: 0px 40px;
 }
+/* about me section css */
+.about {
+  margin-top: 130px;
+}
+.profile-card {
+  display: flex;
+  background: #ffffff;
+  /* box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06); */
+  box-shadow: 10px 5px 5px #DCDCDC;
+  border-radius: 5px;
+  width: 1140px;
+  height: 500px;
+  margin: 0 350px;
+  padding: 50px 50px;
+  gap: 280px;
+}
+.profile-card img {
+  height: 380px;
+  border-radius: 50%;
+  margin-top: 40px;
+}
+.profile-card p {
+  width: 400px;
+  font-size: 21px;
+  margin-top: 70px;
+}
+
 /* footer section css */
 .footer-section {
   margin-top: 130px;
@@ -143,8 +170,8 @@
 .footer-item {
   display: flex;
   padding-top: 115px;
-    margin-left: 230px;
-    gap: 530px;
+  margin-left: 230px;
+  gap: 530px;
 }
 
 .footer-title {
